intermediate revision - removed obsolete documentation, added note about cygwin command for specidic process command line argument discovery